re PR fortran/28914 (Code inside loop hangs; outside loop runs normally; runs OK on other compilers)

2006-09-09  Paul Thomas <pault@gcc.gnu.org>

	PR fortran/28914
	* trans-array.c (gfc_trans_array_constructor_value): Create a temporary
	loop variable to hold the current loop variable in case it is modified
	by the array constructor.

From-SVN: r116808